test/functions/deitz/test_bad_function.chpl
fun foo(i : int) {
  writeln(i);
}

foo(2.0);
